tests/expression/set_mismatch_types.sy
start :: fn do
    a :: set.from_list' [1, "abc", 1.0]
    a
end
// error: $Mismatch
